src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__movie_details_ui__movie_details_ui_tests__tests__snapshot_tests__movie_details_render_Cast.snap
---
source: src/ui/radarr_ui/library/movie_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Movie Info  ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Cast │ Crew │ Manual Search                                                                   │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │   Cast Member                                                 Character                                                  │                     
                    │=> Madison Clarke                                              Johnny Blaze                                               │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
